@@ -496,6 +496,7 @@
 			"WF_PACKAGE_ERROR": "Error in package",
 			"WF_PROCESSINFO_NOT_FOUND": "Tiến trình bỏ qua tập tin XPDL",
 			"WF_START_ACTIVITY_NOT_FOUND": "<em>I have not found a start activity for process {0}</em>",
+			"WF_ACTIVITY_NOT_FOUND": "<em>Process was not congruent, reload the list</em>",
 			"WF_WAPI_CONNECTION_ERROR": "Không thể kết nối được với mày chủ của tiến trình làm việc",
 			"WF_WORKITEM_VARIABLES_REQUIRED": "Những mục bắt buộc: {0}",
 			"WF_WRONG_CREDENTIALS": "Một số thông tin sai khi dùng workflow",
