@@ -100,6 +100,8 @@ FIXES
 
  * NavigationTree widget behaviour errors
 
+ * When updating an activity of a process instance and the activity is not found an unclear error is returned
+
 
 
 
